--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>spring-07-appConfig</module>
         <module>spring-08-proxy</module>
         <module>spring-09-AOP</module>
+        <module>spring-10-Mybatis</module>
     </modules>
 
     <dependencies>
